# CC-GEN

./: Cargo.toml  README.md  index.html  package.json  railway.toml  server.js
benches/: generation_bench.rs
crates/core/: Cargo.toml
crates/core/src/: bin_database.rs  card.rs  crypto.rs  error.rs  formatter.rs  generator.rs  lib.rs  pattern.rs  validator.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
frontend/: 404.html  index.html
frontend/css/: animations.css  card-preview.css  main.css  responsive.css  themes.css
frontend/js/: app.js  export.js  shortcuts.js  theme.js  ui.js  wasm-bridge.js
