[package]
name = "ccgen-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core credit card generation and validation engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "generation_bench"
harness = false
path = "../../benches/generation_bench.rs"
