[package]
name = "ccgen-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for CC-GEN"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ccgen-core = { path = "../core" }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
